--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/config/credentials.js
+/src/config/credentials.js
 
 # dependencies
 /node_modules
